--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,24 @@
 Package: esperaR
 Type: Package
-Title: An unoficial wraper to Portugal's Ministry of Health "tempos" API for collecting hospital wait time data as well as hospital metadata
+Title: Collect wait times data from Portugal's Hospitals
 Version: 0.1.0
 Author: José M. Reis
 Maintainer: José M. Reis <jose.reis@ile-hamburg.de>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: An unoficial wraper to Portugal's Ministry of Health "tempos" API for collecting hospital wait time data as well as hospital metadata.
+Depends:
+    R (>= 3.1.0)
+Imports:
+    httr (>= 1.3.0),
+    jsonlite (>= 0.9.22),
+    magrittr (>= 1.5),
+    tibble (>= 1.3.4),
+    rlang,
+    purrr,
+    lubridate,
+    httr
+License: MIT + file LICENSE
+URL: https://github.com/josemreis/esperaR
+BugReports: https://github.com/josemreis/esperaR/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
