--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,16 +6,16 @@ Author: José M. Reis
 Maintainer: José M. Reis <jose.reis@ile-hamburg.de>
 Description: An unoficial wraper to Portugal's Ministry of Health "tempos" API for collecting hospital wait time data as well as hospital metadata.
 Depends:
-    R (>= 3.1.0)
+    R (>= 3.5.3)
 Imports:
-    httr (>= 1.3.0),
-    jsonlite (>= 0.9.22),
-    magrittr (>= 1.5),
-    tibble (>= 1.3.4),
+    httr,
+    jsonlite,
+    magrittr,
     rlang,
+    tidyr,
+    dplyr,
     purrr,
-    lubridate,
-    httr
+    lubridate
 License: MIT + file LICENSE
 URL: https://github.com/josemreis/esperaR
 BugReports: https://github.com/josemreis/esperaR/issues
