--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,5 @@ BugReports: https://github.com/josemreis/esperaR/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Suggests: 
+    testthat
