--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,30 @@
 
 export(get_hospital_metadata)
 export(get_wait_times)
+export(get_wait_times_all)
 export(hospital_data_availability)
-import(dplyr)
-import(httr)
-import(jsonlite)
-import(lubridate)
-import(magrittr)
-import(purrr)
-import(tidyr)
+export(prep_id)
+importFrom(dplyr,as_tibble)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
+importFrom(dplyr,contains)
+importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,progress_estimated)
+importFrom(dplyr,select)
+importFrom(httr,RETRY)
+importFrom(httr,add_headers)
+importFrom(httr,content)
+importFrom(jsonlite,flatten)
+importFrom(jsonlite,fromJSON)
+importFrom(lubridate,hour)
+importFrom(lubridate,minute)
+importFrom(lubridate,seconds_to_period)
+importFrom(lubridate,ymd_hms)
+importFrom(magrittr,"%>%")
+importFrom(purrr,map)
+importFrom(purrr,possibly)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
+importFrom(tidyr,separate)
