Add handle to GET request

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(dplyr,select)
 importFrom(httr,RETRY)
 importFrom(httr,add_headers)
 importFrom(httr,content)
+importFrom(httr,handle)
 importFrom(jsonlite,flatten)
 importFrom(jsonlite,fromJSON)
 importFrom(lubridate,hour)
