Add mutate_all to imports and fixed bug in testthat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(dplyr,contains)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
 importFrom(dplyr,progress_estimated)
 importFrom(dplyr,select)
 importFrom(httr,RETRY)
