Added last update for surgeries and consultations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(get_wait_times)
 export(get_wait_times_all)
 export(hospital_data_availability)
 export(prep_id)
+importFrom(dplyr,any_vars)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
@@ -21,6 +22,7 @@ importFrom(httr,content)
 importFrom(httr,handle)
 importFrom(jsonlite,flatten)
 importFrom(jsonlite,fromJSON)
+importFrom(lubridate,dmy)
 importFrom(lubridate,hour)
 importFrom(lubridate,minute)
 importFrom(lubridate,seconds_to_period)
