--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Collect wait times data from Portugal's Hospitals
 Version: 0.1.0
 Author: José M. Reis
 Maintainer: José M. Reis <jose.reis@ile-hamburg.de>
-Description: An unoficial wraper to Portugal's Ministry of Health "tempos" API for collecting hospital wait time data as well as hospital metadata.
+Description: An unoficial wrapper to Portugal's Ministry of Health "tempos" API for collecting hospital wait time data as well as hospital metadata.
 Depends:
     R (>= 3.5.3)
 Imports:
